--- a/pom.xml
+++ b/pom.xml
@@ -45,15 +45,13 @@
             </exclusions>
         </dependency>
 
-        <!--Database dependencies-->
+        <!--Hibernate and database dependencies-->
         <!--Compile time JPA API-->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>${javax.persistence-api.version}</version>
         </dependency>
-
-        <!--Hibernate and database dependencies-->
 
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
@@ -69,6 +67,15 @@
             <version>${com.h2database.version}</version>
             <!--<scope>test</scope>-->
         </dependency>
+
+        <!--JSon dependencies to ignore some properties-->
+        <!-- https://mvnrepository.com/artifact/com.monitorjbl/json-view -->
+        <dependency>
+            <groupId>com.monitorjbl</groupId>
+            <artifactId>json-view</artifactId>
+            <version>0.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
