successfuly tested PaymentDetailsRepo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,18 @@ service.backup-path=src/main/resources/backup
 
 service.temp-dir=src/main/resources/temp
 
+
+#database dependencies
+
+spring.datasource.url=jdbc:h2:file:./src/main/resources/database/alter_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+#spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
 server.port=9000
 
