Add Test resources configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ service.backup-path=src/main/resources/backup
 
 service.temp-dir=src/main/resources/temp
 
-
 #database dependencies
 
 spring.datasource.url=jdbc:h2:file:./src/main/resources/database/alter_db
@@ -16,4 +15,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 server.port=9000
+
+
+test.resources.html-test-directory-location=src/test/resources/test_files/html
+
+test.resources.html-test-file-location=src/test/resources/test_files/html/20122019_040318.html
 
