--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,3 +3,6 @@ test.resources.html-test-directory-location=src/test/resources/test_files/html
 
 test.resources.html-test-file-location=src/test/resources/test_files/html/12012020_040319.html
 
+# –азрешение перезаписи названи€ бинов дл€ возможности подмены при тестировании
+spring.main.allow-bean-definition-overriding=true
+
