--- a/src/test/resources/db_properties/immutable-db.properties
+++ b/src/test/resources/db_properties/immutable-db.properties
@@ -1,12 +1,22 @@
 service.backup-path=src/test/resources/backup
 
 
-spring.datasource.url=jdbc:h2:file:./src/test/resources/database/immutable_db
+spring.datasource.url=jdbc:h2:file:./src/test/resources/database/immutable_test_db2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+#spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+#spring.jpa.properties.hibernate.use_sql_comments=false
+#spring.jpa.properties.hibernate.format_sql=false
