--- a/src/test/resources/db_properties/inmemory-db.properties
+++ b/src/test/resources/db_properties/inmemory-db.properties
@@ -4,12 +4,12 @@ test.resources.testDirectory-location=src/test/resources/testList
 
 test.resources.testFile-location=src/test/resources/testList/20122019_040318.html
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
