Add xml parser and pass some tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,6 +3,10 @@ test.resources.html-test-directory-location=src/test/resources/test_files/html
 
 test.resources.html-test-file-location=src/test/resources/test_files/html/12012020_040319.html
 
+test.resources.xml-test-directory-location=src/test/resources/test_files/xml
+
+test.resources.xml-test-file-location=src/test/resources/test_files/xml/per_06022020_100001_8210260.xml
+
 # –азрешение перезаписи названи€ бинов дл€ возможности подмены при тестировании
 spring.main.allow-bean-definition-overriding=true
 
