--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Yuriy work-pc <transpmailbox@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
