Solve the date problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 server.port=9000
+# Насстройки сериализации json Для даты
+spring.jackson.time-zone=Europe/Kiev
+spring.jackson.locale=ru_RU
 
