--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <com.h2database.version>1.4.200</com.h2database.version>
         <hibernate.version>5.4.0.Final</hibernate.version>
+        <spring.boot.starter.data.jpa.version>2.2.1.RELEASE</spring.boot.starter.data.jpa.version>
+        <spring.boot.starter.test.version>2.1.6.RELEASE</spring.boot.starter.test.version>
     </properties>
 
     <dependencies>
@@ -37,7 +39,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <version>2.1.6.RELEASE</version>
+            <version>${spring.boot.starter.test.version}</version>
         </dependency>
 
         <!--Hibernate and database dependencies-->
@@ -89,7 +91,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.2.1.RELEASE</version>
+            <version>${spring.boot.starter.data.jpa.version}</version>
         </dependency>
 
     </dependencies>
