--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,3 +10,8 @@ test.resources.xml-test-file-location=src/test/resources/test_files/xml/per_0602
 # –азрешение перезаписи названи€ бинов дл€ возможности подмены при тестировании
 spring.main.allow-bean-definition-overriding=true
 
+service.backup-path=src/test/resources/backup
+
+
+
+
