--- a/src/test/resources/db_properties/immutable-db.properties
+++ b/src/test/resources/db_properties/immutable-db.properties
@@ -1,13 +1,13 @@
 service.backup-path=src/test/resources/backup
 
 
-spring.datasource.url=jdbc:h2:file:./src/test/resources/database/immutable_test_db2
+spring.datasource.url=jdbc:h2:file:./src/test/resources/database/immutable_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #spring.jpa.show-sql=false
