Fix request parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,5 @@ server.port=9000
 # Насстройки сериализации json Для даты
 spring.jackson.time-zone=Europe/Kiev
 spring.jackson.locale=ru_RU
+spring.mvc.locale=ru_RU
 
