--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,8 @@
 
 test.resources.html-test-directory-location=src/test/resources/test_files/html
 
+test.resources.html-corrupted-dir-location=src/test/resources/test_files/corrupted
+
 test.resources.html-test-file-location=src/test/resources/test_files/html/12012020_040319.html
 
 test.resources.xml-test-directory-location=src/test/resources/test_files/xml
