--- a/src/test/resources/db_properties/immutable-db.properties
+++ b/src/test/resources/db_properties/immutable-db.properties
@@ -7,7 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #spring.jpa.show-sql=false
