Refactored daily statistic with payerCode supportment

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,7 +7,8 @@ test.resources.html-test-file-location=src/test/resources/test_files/html/120120
 
 test.resources.xml-test-directory-location=src/test/resources/test_files/xml
 
-test.resources.xml-test-file-location=src/test/resources/test_files/xml/per_06022020_100001_8210260.xml
+#test.resources.xml-test-file-location=src/test/resources/test_files/xml/per_06022020_100001_8210260.xml
+test.resources.xml-test-file-location=src/test/resources/test_files/corrupted/per_10072020_100001_5635841.xml
 
 spring.main.allow-bean-definition-overriding=true
 
