https added sucessfuly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ spring.jackson.locale=ru_RU
 spring.jackson.date-format=yyyy-MM-dd
 spring.mvc.locale=ru_RU
 
+#https properties
+server.ssl.key-store=classpath:payment-statistic-keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-store-type=pkcs12
+server.ssl.key-alias=payment-statistic
+server.ssl.key-password=password
+
+
