--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
 
 
     </dependencies>
