--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,12 @@ server.ssl.key-store-type=pkcs12
 server.ssl.key-alias=payment-statistic
 server.ssl.key-password=password
 
+#mail properties
+service.mail.protocol=imap
+service.mail.host=mail.adm.tools
+service.mail.port=993
+service.mail.userName=yakhnitsa@ukrtranslogistic.com.ua
+service.mail.password=${mail_password}
+service.mail.sourceEmail=uvp@uz.gov.ua
+
 
