--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.7.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 
