add mail scaner and change scan button style

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,6 @@ service.mail.port=993
 service.mail.userName=yakhnitsa@ukrtranslogistic.com.ua
 service.mail.password=${mail_password}
 service.mail.sourceEmail=uvp@uz.gov.ua
+service.mail.sourceEmails=uvp@uz.gov.ua,office@ukrtranslogistic.com.ua,yakhnitsa@ukrtranslogistic.com.ua
 
 
