--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ server.port=9000
 spring.jackson.time-zone=Europe/Kiev
 spring.jackson.locale=ru_RU
 spring.jackson.date-format=yyyy-MM-dd
+#spring.jackson.mapper.DEFAULT_VIEW_INCLUSION=true
 spring.mvc.locale=ru_RU
 
 #https properties
