--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,21 @@
-service.backup-path=~/utl-web-app/backup
+service.backup-path=${backup_dir}
 
 service.temp-dir=src/main/resources/temp
 
 #database dependencies
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_utl_web_app
-spring.datasource.username=developer
-spring.datasource.password=${MYSQL_PASS}
+spring.datasource.url=jdbc:h2:file:./src/main/resources/database/alter_db2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 #spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-server.port=8080
-# пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ json пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
+server.port=9000
+# Насстройки сериализации json Для даты
 spring.jackson.time-zone=Europe/Kiev
 spring.jackson.locale=ru_RU
 spring.jackson.date-format=yyyy-MM-dd
@@ -32,7 +34,7 @@ service.mail.protocol=imap
 service.mail.host=mail.adm.tools
 service.mail.port=993
 service.mail.userName=yakhnitsa@ukrtranslogistic.com.ua
-service.mail.password=${MAIL_PASSWORD}
+service.mail.password=${mail_password}
 service.mail.sourceEmail=uvp@uz.gov.ua
 service.mail.sourceEmails=uvp@uz.gov.ua,office@ukrtranslogistic.com.ua,yakhnitsa@ukrtranslogistic.com.ua
 
