Add flyway first migration, not tested yet

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,18 +4,18 @@ service.temp-dir=src/main/resources/temp
 
 #database dependencies
 
-spring.datasource.url=jdbc:h2:file:./src/main/resources/database/alter_db2
+spring.datasource.url=jdbc:h2:file:./src/main/resources/database/test_db2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-#spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 server.port=9000
-# Насстройки сериализации json Для даты
+# пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ json пїЅпїЅпїЅ пїЅпїЅпїЅпїЅ
 spring.jackson.time-zone=Europe/Kiev
 spring.jackson.locale=ru_RU
 spring.jackson.date-format=yyyy-MM-dd
