--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ service.temp-dir=src/main/resources/temp
 
 #database dependencies
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_utl_web_app
 spring.datasource.username=developer
 spring.datasource.password=${MYSQL_PASS}
