add simple bash script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ service.temp-dir=src/main/resources/temp
 #database dependencies
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_utl_web_app
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_utl_web_app?serverTimezone=UTC&useUnicode=true
 spring.datasource.username=developer
 spring.datasource.password=${MYSQL_PASS}
 
@@ -17,7 +17,6 @@ server.port=8080
 spring.jackson.time-zone=Europe/Kiev
 spring.jackson.locale=ru_RU
 spring.jackson.date-format=yyyy-MM-dd
-#spring.jackson.mapper.DEFAULT_VIEW_INCLUSION=true
 spring.mvc.locale=ru_RU
 
 #https properties
