Fix problem with timezone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 service.backup-path=~/utl-web-app/backup
 
 service.temp-dir=src/main/resources/temp
+application.timezone=UTC
 
 #database dependencies
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_utl_web_app?serverTimezone=UTC&useUnicode=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_utl_web_app?serverTimezone=${application.timezone}&useUnicode=true
 spring.datasource.username=developer
 spring.datasource.password=${MYSQL_PASSWORD}
 
