Add security principals to model

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,8 +14,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_utl_web_app?serverTimezone=
 spring.datasource.username=developer
 spring.datasource.password=pass_8852545
 
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
