Fix problem with backup dir

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-service.backup-path=~/utl-web-app/backup
+service.backup-path=/home/yri/utl-web-app/backup
 
 service.temp-dir=src/main/resources/temp
 application.timezone=UTC
