--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-chartjs": "^3.5.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
+    "vue-simple-context-menu": "^3.2.0",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
