--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <version>${org.flywaydb.core.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
