--- a/src/test/resources/db_properties/immutable-db.properties
+++ b/src/test/resources/db_properties/immutable-db.properties
@@ -20,3 +20,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.properties.hibernate.use_sql_comments=false
 #spring.jpa.properties.hibernate.format_sql=false
+
+spring.flyway.enabled=false
