--- a/src/test/resources/db_properties/inmemory-db.properties
+++ b/src/test/resources/db_properties/inmemory-db.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.flyway.enabled=false
