Add flyway migration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,6 +17,7 @@ spring.datasource.password=pass_8852545
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
+#spring.flyway.enabled=false
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 server.port=9000
