--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_utl_web_app?serverTimezone=
 spring.datasource.username=developer
 spring.datasource.password=pass_8852545
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 #spring.flyway.enabled=false
