--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
