--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
     "vue-simple-context-menu": "^3.2.0",
+    "vue-toastification": "^1.7.8",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
